# EECS545_HLSVZ

./: .gitignore  CLAUDE.md  Get_SWE_bench.ipynb  Get_SWE_bench.py  README.md  plan.md  pyproject.toml  requirements.txt  swe_bench_examples_raw.json  swe_bench_examples_verbose.json  sweagent_stats.py  test_vlm.py
SWE-agent/: .gitignore
SWE-agent/config/: bash_only.yaml  coding_challenge.yaml  default.yaml  default_backticks.yaml  default_mm_no_images.yaml  default_mm_with_images.yaml
Summary_Data/: ablation_features.csv  efficiency_frontier_bpt_instances.csv  efficiency_frontier_bpt_runs.csv  efficiency_frontier_bpt_runs_runs.csv  instance_metrics.csv  instance_overlap_wide.csv  instance_overlap_wide_pairwise.csv  instance_overlap_wide_wide.csv  mcts_branch_stats.csv  resource_waste.csv  steps_to_solve.csv
combined_results/: ablation_features.csv  efficiency_accuracy.csv  efficiency_frontier_bpt_instances.csv  final_efficiency_accuracy.csv  final_instance_metrics.csv  final_pareto_frontier.csv  final_results.csv  final_tables.tex  instance_overlap_pairwise.csv  resource_waste.csv  results.csv  steps_to_solve.csv  tables.tex
results_summary/: README.md  agent_handoff_summary.md  combined_comparison.md  final_project_summary.md  mcts_vs_linear_resource_expense_explanation.md  raw_data.md
tree_search_outputs/: board_rollup_human_readable.txt  budget_snapshot_human_readable.txt  diff_v2_through_v4.txt  diff_v3_v4.txt  diff_v5_v6.txt  my_run_traj_human_readable.txt  v10_full_results.csv  v6_v7_compare.csv  v7_results.csv  v9_results.csv
(+6856 files in other folders)
