[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "swebench-sweagent-stack"
version = "0.1.0"
description = "Top-level project that installs SWE-bench and a modified SWE-agent together."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [{ name = "Steven Vollmer", email = "stevenzv@umich.edu" }]

dependencies = [
    # Install both projects from local subdirectories
    "swebench @ file:./swe-bench",
    "sweagent @ file:./swe-agent",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist", "pre-commit"]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "mike",
    "pymdown-extensions",
]

datasets = [
    "protobuf",
    "sentencepiece",
    "tiktoken",
    "transformers",
    "openai",
    "anthropic",
    "jedi",
]

inference = ["torch>=2.0.0", "peft", "triton", "flash_attn>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["swebench*", "sweagent*"]
